--- a/handouts/day-2.tex
+++ b/handouts/day-2.tex
@@ -43,7 +43,7 @@ Make sure it is clear what each part
 of the input does. For this example
 we will use the PILE-G thermostat\cite{ceri+11jcp} and 
 constant-temperature sampling. We will 
-initially preform a reference molecular dynamics run, with $P=1$. 
+initially perform a reference molecular dynamics run, with $P=1$. 
 
 \begin{lstlisting}[language=bash]
 $ cd ex-1 
