--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -311,7 +311,7 @@ it should be clear that the quantum kinetic and potential energy will be printed
 
 \Question
 Observe the \lstinxml$<initialize></initialize>$ section. We will be initialzing from a checkpoint file 
-\lstinbash{start.chk} which is basically a RESTART file of a long equilibration run. 
+\lstinbash{init.chk} which is basically a RESTART file of a long equilibration run. 
 From the previous exercise, it should be clear that the option \lstinbash{nbeads} should be $1$ for a classical simulation.
 
 \begin{lstlisting}[language=xml]
@@ -429,7 +429,7 @@ To plot the average estimates with errors bars launch \url{gnuplot} and type the
 You should observe that the kinetic and potential energy individually converge to their quantum limit for \url{nbeads} $\sim 32$.
 
 \Question
-Executing \url{extract-gOH.bash} and \url{extract-kin.bash} will a file called gOH.data inside each of the sub directories \lstinbash{n.*}.
+Executing \url{extract-gOH.bash} and \url{extract-kin.bash} will create a file called gOH.data inside each of the sub directories \lstinbash{n.*}.
 \begin{lstlisting}[language=bash]
 $ pwd
 tutorial-pimd16/day-1/ex-3
@@ -480,7 +480,7 @@ $ cat $prefix.pos_* | trajworks -ipdb -vbox -gr -gr1 H\
 \end{lstlisting}
 
 \Question
-You can use \url{gnuplot} to observe the difference int the pair distributions functions with and without PIMD. 
+You can use \url{gnuplot} to observe the difference in the pair distributions functions with and without PIMD. 
 Launch gnuplot by typing \url{gnuplot} on the terminal and execute the following statement 
 \begin{lstlisting}[language=bash]
 > p "n.128/gHH.data" u 1:2 w l, "n.001/gHH.data" u 1:2 w l
