--- a/handouts/style.tex
+++ b/handouts/style.tex
@@ -45,7 +45,7 @@
 \lstdefinelanguage{Bash}
 {
    alsodigit={-,.},
-   morekeywords={ cp2k.popt, lmp_ubuntu, i-pi, vmd, for, done, python, mpirun, touch, tail, trajworks, autocorr, awk, i-pi-mergebeadspdb, grep, head, cp, cd, cat, ls, pwd, bash, sed, mkdir, vi, sh}
+   morekeywords={ cp2k.popt, lmp_serial, i-pi, vmd, for, done, python, mpirun, touch, tail, trajworks, autocorr, awk, i-pi-mergebeadspdb, grep, head, cp, cd, cat, ls, pwd, bash, sed, mkdir, vi, sh}
    %morecomment=[s][\color{orange}]{#}{\}
 }
 
