--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -462,7 +462,7 @@ purpose of comparison we will also run a cheap MD.
 Move to the directory \url{ex-4/} and carefully observe the \ipi{} input files \url{n.001/input.xml} 
 and \url{n.128/input.xml}. You will be initializing from an already thermalized restart file called 
 \url{init.chk}. We shall also be printing out the trajectory every $1$fs so that we have enough 
-statistics to compute the Hydrogen--Hydrogen pair distribution function. Run the classical and 
+frames to compute the Hydrogen--Hydrogen pair distribution function. Run the classical and 
 quantum simulations in their respective directories.
 
 \begin{lstlisting}[language=bash]
