Updated the url for generating GLE thermostats in day-2

--- a/handouts/day-2.tex
+++ b/handouts/day-2.tex
@@ -127,7 +127,7 @@ The matrix elements that are included in this section determine the behavior
 of the colored-noise dynamics, and have been fitted to give the correct
 quantum fluctuations in the harmonic limit. Parameters that are suitable for
 a broad range of conditions can be obtained from the on-line repository
-\url{http://epfl-cosmo.github.io/gle4md/index.html?page=matrix} -- familiarize
+\url{http://gle4md.org/index.html?page=matrix} -- familiarize
 yourself with the interface.
 
 \ExeText
@@ -167,7 +167,7 @@ aspect.
 but don't run it just yet. What thermostat is being used? How many beads? 
 Although one may think that at such a high temperature quantum effects will be 
 mild, it is a good idea to use a PIGLET thermostat just to be sure. 
-Generate input parameters from \url{http://epfl-cosmo.github.io/gle4md/index.html?page=matrix},
+Generate input parameters from \url{http://gle4md.org/index.html?page=matrix},
 adapting them to the thermodynamic conditions considered here, substitute
 the \lstinxml$<thermostat>$ field and launch your simulation. \hints{Note
 that the barostat (a kind of a Langevin piston~\cite{buss+09jcp}, adapted
