Add reference. Few changes in the tutorial tex

--- a/handouts/day-3.tex
+++ b/handouts/day-3.tex
@@ -2,7 +2,7 @@
 \input{style.tex}
 \title{Path integral approximations to real time correlations}
 \author{Mariana Rossi}
-\date{May 2016}
+\date{June 2018}
 
 \begin{document}
 
@@ -229,7 +229,7 @@ $ python ../../tools/get_imacf_from_real.py rpmd.vv 200 56 > rpmd.imvacf
 $ python ../../tools/get_imacf_from_real.py cmd.vv 200 56 > cmd.imvacf
 \end{lstlisting}
 
-Compare all the imaginary time correlations with the one provided in \texttt{ex-2/precomputed-imvacf/}. Are the imaginary functions reconstructed from different methods appreciably different? Which is the one that is further away from the exact imaginary time correlation? Can you think about reasons for their similarities/differences?
+Compare all the imaginary time correlations with the one provided in \texttt{ex-2/precomputed-imvacf/}. Are the imaginary functions reconstructed from different methods appreciably different? Can you think about reasons for their similarities/differences? (Hint: look at the expressions above.)
 
 
 \end{Exercise}
