--- a/handouts/day-1.tex
+++ b/handouts/day-1.tex
@@ -230,9 +230,9 @@ Similarly, the units of the initialization files can be specified such as
 \end{lstlisting}
 When using \ipi{}, you can play around with the units to facilitate the initialization process as well as subsequent analyses.
 %
-Please note that \ipi{} can read the unit cell from the comment line in the xyz file. %, and this should override the unit cell specified in the cp2k input file.
+Please note that \ipi{} can read the unit cell from the comment line in the xyz file. 
 %
-The cell and positions in the cp2k input file is just for the purpose of initializating the cp2k program and at the first simulation step both would be overridden.
+The cell and positions in the CP2K input file is just for the purpose of initializating the CP2K program and at the first simulation step both would be overridden.
 %Also, one can specify the unit cell in the \ipi{} input file, which will override the unit cell read in from the xyz file.
 
 \Question
