add instanton handout

--- a/handouts/biblio.bib
+++ b/handouts/biblio.bib
@@ -15517,3 +15517,33 @@ year = {2013}
      archivePrefix = "arXiv",
      eprint        = "0707.3168",
 }
+@Article{Corchado2009HCH4,
+  Title                    = {{The hydrogen abstraction reaction {H + CH$_4$}. I. New analytical potential energy surface based on fitting to ab initio calculations}},
+  Author                   = {Corchado, Jose C and Bravo, Jose L and Espinosa-Garcia, Joaquin},
+  Journal                  = {J.~Chem. Phys.},
+  Year                     = {2009},
+  Number                   = {18},
+  Pages                    = {184314},
+  Volume                   = {130},
+
+  Doi                      = {10.1063/1.3132223},
+  File                     = {Corchado2009HCH4.pdf:PES/Corchado2009HCH4.pdf:PDF},
+  Publisher                = {AIP Publishing}
+}
+
+@Article{InstReview,
+  Title                    = {Ring-polymer instanton Theory},
+  Author                   = {Jeremy O. Richardson},
+  Journal                  = {Int. Rev. Phys. Chem.},
+  Year                     = {2018},
+  Pages                    = {171},
+  Volume                   = {37},
+
+  Doi                      = {10.1080/0144235X.2018.1472353},
+  File                     = {:2018/InstReview/published.pdf:PDF},
+  Keywords                 = {me},
+  Owner                    = {jeremy},
+  Shortauthor              = {Jeremy O. Richardson\corr}
+}
+
+
