number of beads for the instanton

--- a/handouts/instanton.tex
+++ b/handouts/instanton.tex
@@ -189,6 +189,10 @@ Note that it is the log of the vibrational partition function which is printed, 
 In this way, you should find that the rate is about 9.8 times faster due to tunnelling.
 Which is the major contributing factor?
 
+\Question
+In this tutorial, the number of beads used in the example is much more than necessary.
+Please try the instanton calculation with 10 or 20 beads, and see how the results ($\kappa$) compare.
+
 \end{Exercise}
 
 
