add 'mkdir' hint to instanton handout

--- a/handouts/instanton.tex
+++ b/handouts/instanton.tex
@@ -112,6 +112,8 @@ in the shape (3N,3Nn).
 \begin{Exercise}[label={inst2},title={Second and subsequent instanton optimizations}]
 
 \Question
+Make the folder \url{input/instanton/80}.
+\Question
 Go to the folder \url{input/instanton/80}.
 \Question
 Copy the optimized transition state geometry obtained in Ex.~\ref{TS} and name it \url{init.xyz}.
